<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="200dp"
    android:layout_height="270dp"
    android:gravity="center"
    android:layout_gravity="center"
    android:clipChildren="true"
    android:clipToPadding="true"

    android:background="@drawable/dialogstyle"
    android:orientation="vertical" >


<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
<TextView 
    android:id="@+id/title"
    android:layout_width="match_parent"
android:layout_height="wrap_content" 
android:text="@string/Alarm_Clock" 
android:paddingTop="7dp"
android:gravity="center" 
android:textSize="25sp" />

<TextView 
    android:id="@+id/time"
    android:layout_width="match_parent"
android:layout_height="wrap_content" 
android:text="@string/Default_time" 
android:gravity="center" 
android:layout_marginTop="15dp"
android:textSize="35sp" />


<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:layout_marginTop="15dp"
    android:orientation="horizontal">
    
    <ImageView
        android:id="@+id/snooze_10"
        android:contentDescription="@string/snooze_10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ten" 
                 
        />
        
         <ImageView
        android:id="@+id/snooze_5"
         android:contentDescription="@string/snooze_5"
        android:paddingLeft="15dp"
        android:layout_toRightOf="@+id/snooze_10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/five"             
        />
        
 


    
    <ImageView
        android:id="@+id/snooze_3"
         android:contentDescription="@string/snooze_3"
        android:layout_below="@+id/snooze_10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/three"     
         android:paddingTop="15dp"        
        />
        
         <ImageView
        android:id="@+id/stop"
         android:contentDescription="@string/stop_snooze"
        android:paddingLeft="15dp"
        android:layout_below="@+id/snooze_5"
        android:layout_toRightOf="@+id/snooze_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/stop"   
         android:paddingTop="15dp"          
        />
         
         
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="25sp"
             android:textColor="@color/white"
             android:text="@string/ten_mins"
            android:layout_alignLeft="@+id/snooze_10"
    android:layout_alignTop="@+id/snooze_10"
    android:layout_alignRight="@+id/snooze_10"
    android:layout_alignBottom="@+id/snooze_10"
    android:layout_margin="1dp"
    android:gravity="center"
             />
         
            <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="25sp"
             android:text="@string/five_mins"
             android:textColor="@color/white"
            android:layout_alignLeft="@+id/snooze_5"
    android:layout_alignTop="@+id/snooze_5"
    android:layout_alignRight="@+id/snooze_5"
    android:layout_alignBottom="@+id/snooze_5"
    android:layout_margin="1dp"
    android:gravity="center"
    android:paddingLeft="15dp"
             />
            
               <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="25sp"
             android:text="@string/three_mins"
             android:textColor="@color/white"
            android:layout_alignLeft="@+id/snooze_3"
    android:layout_alignTop="@+id/snooze_3"
    android:layout_alignRight="@+id/snooze_3"
    android:layout_alignBottom="@+id/snooze_3"
    android:layout_margin="1dp"
    android:gravity="center"
    android:paddingTop="15dp"
             />
               
                  <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="24sp"
             android:text="@string/stop"
             android:textColor="@color/white"
            android:layout_alignLeft="@+id/stop"
    android:layout_alignTop="@+id/stop"
    android:layout_alignRight="@+id/stop"
    android:layout_alignBottom="@+id/stop"
    android:layout_margin="1dp"
    android:gravity="center"
    android:paddingLeft="15dp"
     android:paddingTop="15dp"
             />
        
 </RelativeLayout>


</LinearLayout>
</RelativeLayout>
