<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:clipChildren="true"
    android:clipToPadding="true"
    android:background="@drawable/dialogstyle"
    android:orientation="vertical" >

<LinearLayout
 
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  >
  
      <TextView
        android:id="@+id/Title"
        
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/adjustTime"
        
        android:textSize="25sp"
        android:textStyle="bold"
   
        
         />
    
    
    
    
    <View
        android:id="@+id/topborder"
      
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_margin="0dp"
        android:padding="0dp"
        android:background="@color/white" />
    
  
    
    
    
    <LinearLayout
 android:layout_marginTop="20dp"
  android:orientation="horizontal"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  >
    <TextView 
        android:layout_gravity="center"
        
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
    android:textAppearance="?android:attr/textAppearanceMedium"
           android:textStyle="bold"
        android:text="@string/dialy_adjustment"
        />
    <SeekBar android:layout_height="wrap_content" android:id="@+id/sTime" android:layout_width="150dp" android:max="60" android:layout_marginLeft="20dp" ></SeekBar>
    <TextView 
        
        android:id="@+id/time"
          android:typeface="serif"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    </LinearLayout>
      

   <LinearLayout 
       android:layout_marginTop="10dp"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="horizontal">
   <TextView 
        android:id="@+id/Tone"
           android:textAppearance="?android:attr/textAppearanceMedium"
          android:typeface="serif"
          android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/First_Alarm"
        />
    <TextView 
        android:id="@+id/alarmText"
           android:textAppearance="?android:attr/textAppearanceMedium"
          android:typeface="serif"
          android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zero_days"
        />
       
       </LinearLayout>
     <LinearLayout
         android:id="@+id/buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
      android:layout_gravity="center"
        android:layout_marginTop="20dp" >

        <Button
            android:id="@+id/cancel"
            android:layout_marginRight="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/dialogstyle"
            android:text="@string/cancel" />

        <Button 
        
        android:id="@+id/enable"
        android:layout_gravity="center"
        android:layout_marginLeft="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enable"
        android:background="@drawable/dialogstyle"
        />
    </LinearLayout>  
    
 
 

</LinearLayout>

</RelativeLayout>
