<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialogstyle"
    android:clipChildren="true"
    android:clipToPadding="true"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ADD_ALARM"
            android:layout_gravity="center"
            android:textSize="25sp"
            android:textStyle="bold" />

        <View
            android:id="@+id/topborder"
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:layout_margin="0dp"
            android:background="@color/white"
            android:padding="0dp" />

        <TextView
            android:id="@+id/Title1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:text="@string/Alarm_Name"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/alarmName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp" />

        <LinearLayout
            android:id="@+id/buttons"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp" >

            <Button
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:background="@drawable/dialogstyle"
                android:text="@string/back_normal" />

            <Button
                android:id="@+id/OKbutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:background="@drawable/dialogstyle"
                android:text="@string/Finish" />
        </LinearLayout>

        <Button
            android:id="@+id/OKbutton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/dialogstyle"
            android:text="@string/Done"
            android:visibility="gone" />
    </LinearLayout>

</RelativeLayout>