<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/brown"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/listviewlayout"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/addAlarmControls"
        android:layout_marginBottom="5dip"
        android:layout_marginTop="5dip"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView_title_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:paddingLeft="5dp"
            android:text="@string/MY_ALARMS"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/primary_text_dark" />

        <ListView
            android:id="@+id/listview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@color/black"
            android:dividerHeight="1dp" >
        </ListView>

        <TextView
            android:id="@+id/noAlarms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_alarms" />
    </LinearLayout>

    <View
        android:id="@+id/title_border_bottom"
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_above="@+id/addAlarmControls"
        android:layout_marginBottom="1dp"
        android:background="@color/black" />

    <LinearLayout
        android:id="@+id/addAlarmControls"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/SecondPart"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/button_new"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="@color/brown"
            android:src="@android:drawable/ic_menu_add" />

        <TextView
            android:id="@+id/textView_title_bar1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingLeft="5dp"
            android:paddingTop="5dp"
            android:text="@string/ADD_ALARM"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/primary_text_dark" />
        
        
    </LinearLayout>

    <LinearLayout
        android:id="@+id/SecondPart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:clickable="true"
        android:orientation="vertical"
        android:paddingBottom="15dp" >

        <LinearLayout
            android:id="@+id/firstContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="10dp" >

            <com.manas.sunrisealarm.alarm.CustomDigitalClock
                android:id="@+id/fragment_clock_digital"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="55dp"
                android:text="@string/DigitalClock"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/Date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="55dp"
                android:text="@string/Current_Date"
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:orientation="vertical"
        android:paddingBottom="15dp"
        android:paddingRight="15dp" >

        <LinearLayout
            android:id="@+id/firstContainer1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="15dp" >

            <TextView
                android:id="@+id/label1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="55dp"
                android:text="@string/Next"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/sunrisetime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/SUNRISE_N_A"
                android:textSize="15sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/sunrise_small" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/firstContainer2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/label2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="55dp"
                android:text="@string/Today"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/sunsettime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/SUNSET_N_A"
                android:textSize="15sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/sunset_small" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>